<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CreditCardInput</string>
    <string name="action_settings">Settings</string>
    <string name="title">Credit Card Information</string>
    <string name="card_numbers">Card:</string>
    <string name="expiration">Expiration(mm/yyyy)</string>
    <string name="ccv_pin">CCV Pin</string>    
    <string name="submit">SUBMIT</string>
    <string name="split"> / </string>
    
    <string name="success">Submitted successfully</string>
    <string name="invalid_card">Invalid card number, please try again.</string>
    <string name="empty">Please enter all required information.</string>
    
    <string-array name="months_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>        
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
